# computorV1

./: .gitignore  CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.hpp  Makefile  Monome.cpp  Monome.h  Monome.h.gch  Monome.hpp  Polynome.cpp  Polynome.h  Polynome.h.gch  Polynome.hpp  README.md  Sample.cpp  Sample.h  StringHelper.cpp  StringHelper.hpp  a.out  computor  correction.txt  functions.cpp  functions.h  functions.hpp  main.cpp  readMe.md  test.cpp
testcpp/: Sample.cpp  function.cpp  maintest.cpp
