cmake_minimum_required(VERSION 3.14)
project(Com1)

set(CMAKE_CXX_STANDARD 14)

add_executable(toto
        main.cpp
        Monome.cpp
        Monome.hpp
        Polynome.cpp
        Polynome.hpp
        functions.hpp
        Monome.cpp
        Monome.hpp
        functions.cpp ComplexNumber.cpp ComplexNumber.hpp StringHelper.cpp StringHelper.hpp)